Sttc added with route

--- a/src/app/_component/stt-setting/cu-stt/cu-stt.component.html
+++ b/src/app/_component/stt-setting/cu-stt/cu-stt.component.html
@@ -216,7 +216,7 @@
                                 <label for="apiSecurityLkValue">Security Key</label>
                                 <input type="text" id="apiSecurityLkValue" maxlength="255"
                                     formControlName="apiSecurityLkValue"
-                                    (input)="changeOnSecurityLkValue($event.target.value)"
+                                    (input)="onChangeSecurityLkValue($event.target.value)"
                                     class="form-control input-sm"
                                     placeholder="Enter Lookup Key" />
                             </div>
