--- a/src/app/_component/stt-setting/batch/batch.component.html
+++ b/src/app/_component/stt-setting/batch/batch.component.html
@@ -1,3 +1,18 @@
+<div class="row">
+    <div class="col-lg-6">
+        <h6 class="card-title" style="font-size: large;">{{title}}</h6>
+    </div>
+    <div class="col-lg-6" style="margin-top: 5px;text-align: end;">
+        <input type="file" accept="application/vnd.ms-excel,
+            application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+            style="display: none;"
+            #inputUpload (change)="uploadBulkData($event.target.files[0])" hidden>
+        <button type="button" class="btn btn-sm btn-default" (click)="inputUpload.click()">
+            <span class="glyphicon glyphicon-upload"></span> Upload
+        </button>
+    </div>
+    <div class="col-lg-12"><hr style="margin-top: 10px;"></div>
+</div>
 <!-- card detail -->
 <table class="table table-bordered table-sm
     table-responsive table-striped" style="font-size: 10px;">
