--- a/src/app/_component/stt-setting/cu-sttc/cu-sttc.component.html
+++ b/src/app/_component/stt-setting/cu-sttc/cu-sttc.component.html
@@ -63,75 +63,254 @@
     }
 </style>
 
-<div class="row gutters-sm">
-    <div class="col-lg-12">
-        <div id="basic" class="borderd-content">
-            <div class="title" style="color: #cb0f43;">{{title}} Control</div>
-            <div class="content" style="margin-top: 10px;">
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="form-group">
-                            <label for="controlName">Control Name</label>
-                            <input type="text" id="controlName"
-                                maxlength="40"
-                                class="form-control input-sm"
-                                placeholder="Enter control name" />
+<div class="row gutters-sm" *ngIf="sttcForm" style="margin-top: 15px;">
+    <form [formGroup]="sttcForm" (ngSubmit)="onSubmit()">
+        <div class="col-lg-12">
+            <div id="basic" class="borderd-content">
+                <div class="title" style="color: #cb0f43;">{{title}} Control</div>
+                <div class="content" style="margin-top: 10px;">
+                    <div class="row">
+                        <!-- sttCOrder -->
+                        <div class="col-lg-4">
+                            <div class="form-group">
+                                <label for="sttCOrder">Control Order</label>
+                                <input type="number" id="sttCOrder"
+                                    min="0" max="150"
+                                    formControlName="sttCOrder"
+                                    class="form-control input-sm"
+                                    placeholder="Enter control order"/>
+                                <div *ngIf="submitted && f.sttCOrder.errors" class="invalid-feedback">
+                                    <div *ngIf="f.sttCOrder.errors.required" style="color: red;">
+                                        Order is required
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="filedName">Filed Name</label>
+                                <input type="text" id="filedName"
+                                    formControlName="filedName"
+                                    class="form-control input-sm"
+                                    placeholder="Enter filed name"
+                                    [ngClass]="{ 'is-invalid': submitted && f.filedName.errors }" />
+                                <div *ngIf="submitted && f.filedName.errors" class="invalid-feedback">
+                                    <div *ngIf="f.filedName.errors.required"
+                                        style="color: red;">Filed Name is required
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="placeHolder">PlaceHolder</label>
+                                <input type="text" id="placeHolder"
+                                    formControlName="placeHolder"
+                                    class="form-control input-sm"
+                                    placeholder="Enter placeholder if any" />
+                            </div>
+                            <div class="form-group">
+                                <label for="minLength">Min Length</label>
+                                <input type="number" id="minLength" min="0" max="10"
+                                    formControlName="minLength"
+                                    class="form-control input-sm"
+                                    placeholder="Enter min length"/>
+                            </div>
+                        </div>
+                        <!-- sttCName -->
+                        <div class="col-lg-4">
+                            <div class="form-group">
+                                <label for="sttCName">Control Name</label>
+                                <input type="text" id="sttCName"
+                                    formControlName="sttCName"
+                                    class="form-control input-sm"
+                                    placeholder="Enter control name"
+                                    oninput="this.value = this.value.toUpperCase()" 
+                                    [ngClass]="{ 'is-invalid': submitted && f.sttCName.errors }" />
+                                <div *ngIf="submitted && f.sttCName.errors" class="invalid-feedback">
+                                    <div *ngIf="f.sttCName.errors.required"
+                                        style="color: red;">Control Name is required
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="filedTitle">Filed Title</label>
+                                <input type="text" id="filedTitle"
+                                    minlength="2" maxlength="150"
+                                    formControlName="filedTitle"
+                                    class="form-control input-sm"
+                                    placeholder="Enter filed title"
+                                    [ngClass]="{ 'is-invalid': submitted && f.filedTitle.errors }" />
+                                <div *ngIf="submitted && f.filedTitle.errors" class="invalid-feedback">
+                                    <div *ngIf="f.filedTitle.errors.required"
+                                        style="color: red;">Filed Title is required
+                                    </div>
+                                    <div *ngIf="f.filedTitle.errors.minlength"
+                                        style="color: red;">Filed Title is maxlength 0
+                                    </div>
+                                    <div *ngIf="f.filedTitle.errors.maxlength"
+                                        style="color: red;">Filed Title is maxlength 150
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="pattern">Pattern</label>
+                                <input type="text" id="pattern"
+                                    formControlName="pattern"
+                                    class="form-control input-sm"
+                                    placeholder="Enter pattern if any" />
+                            </div>
+                            <div class="form-group">
+                                <label for="maxLength">Max Length</label>
+                                <input type="number" id="maxLength" min="0" max="10"
+                                    formControlName="maxLength"
+                                    class="form-control input-sm"
+                                    placeholder="Enter max length"/>
+                            </div>
+                        </div>
+                        <!-- description -->
+                        <div class="col-lg-4">
+                            <div class="form-group">
+                                <label for="description">Description</label>
+                                <input type="text" id="description"
+                                    formControlName="description"
+                                    class="form-control input-sm"
+                                    placeholder="Enter description"
+                                    [ngClass]="{ 'is-invalid': submitted && f.description.errors }" />
+                                <div *ngIf="submitted && f.description.errors" class="invalid-feedback">
+                                    <div *ngIf="f.description.errors.required"
+                                        style="color: red;">Description is required
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="filedWidth">Filed Width</label>
+                                <input type="number" id="filedWidth" min="0" max="12"
+                                    formControlName="filedWidth"
+                                    class="form-control input-sm"
+                                    placeholder="Enter filed width"/>
+                                <div *ngIf="submitted && f.filedWidth.errors" class="invalid-feedback">
+                                    <div *ngIf="f.filedWidth.errors.required" style="color: red;">
+                                        Filed Width is required
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group"*ngIf="formControlType">
+                                <label for="filedType">FiledType</label>
+                                <select id="filedType"
+                                    formControlName="filedType"
+                                    class="form-control input-sm"
+                                    [ngClass]="{ 'is-invalid': submitted && f.filedType.errors }"
+                                    (change)="onFiledType($event.target.value)"
+                                    disabled>
+                                    <option hidden value="" disabled selected>
+                                        {{formControlType.parentLookupData.description}}
+                                    </option>
+                                    <option *ngFor="let controlType of formControlType.subLookupData"
+                                        [value]="controlType.lookupValue">{{controlType.description}}
+                                    </option>
+                                </select>
+                                <div *ngIf="submitted && f.filedType.errors" class="invalid-feedback">
+                                    <div *ngIf="f.filedType.errors.required"
+                                        style="color: red;">Request method is required
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group" *ngIf="filedTypeForLkValue">
+                                <label for="filedLkValue">Filed Value</label>
+                                <input type="text" id="filedLkValue"
+                                    formControlName="filedLkValue"
+                                    class="form-control input-sm"
+                                    placeholder="Enter lookup value"
+                                    [ngClass]="{ 'is-invalid': submitted && f.filedLkValue.errors }"
+                                    (input)="onChangeFiledLkValue($event.target.value)"/>
+                            </div>
+                        </div>
+                        <div class="col-lg-12" *ngIf="hasKey">
+                            <div class="form-group">
+                                <label for="filedLkDetail">Security Value</label>
+                                <textarea type="text" rows="10"
+                                    id="filedLkDetail"
+                                    formControlName="filedLkDetail"
+                                    [ngModel]="filedLkValueOption | json"
+                                    class="form-control input-sm" disabled></textarea>
+                            </div>
+                        </div>
+                        <!-- mandatory -->
+                        <div class="col-lg-4" *ngIf="mandatoryOption">
+                            <div class="form-group">
+                                <label for="mandatory">Required</label>
+                                <select id="mandatory"
+                                    formControlName="mandatory"
+                                    class="form-control input-sm"
+                                    [ngClass]="{ 'is-invalid': submitted && f.mandatory.errors }">
+                                    <option hidden value="" disabled selected>
+                                        {{mandatoryOption.parentLookupData.description}}
+                                    </option>
+                                    <option *ngFor="let controlType of mandatoryOption.subLookupData"
+                                        [value]="controlType.lookupValue">{{controlType.description}}
+                                    </option>
+                                </select>
+                                <div *ngIf="submitted && f.mandatory.errors"
+                                    class="invalid-feedback">
+                                    <div *ngIf="f.mandatory.errors.required"
+                                        style="color: red;">
+                                        Mandatory is required
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4" *ngIf="action === 2">
+                            <div class="form-group" *ngIf="statusList">
+                                <label for="status">Status</label>
+                                <select id="status" class="form-control input-sm"
+                                    formControlName="status"
+                                    [ngClass]="{ 'is-invalid': submitted && f.status.errors }"
+                                    [attr.disabled]="f.status.value === 2 ? true : null">
+                                    <option hidden value="" disabled selected>
+                                        {{statusList.parentLookupData.description}}
+                                    </option>
+                                    <option *ngFor="let status of statusList.subLookupData"
+                                        [value]="status.lookupValue">{{status.description}}
+                                    </option>
+                                </select>
+                                <div *ngIf="submitted && f.status.errors" class="invalid-feedback">
+                                    <div *ngIf="f.status.errors.required" style="color: red;">
+                                        Status is required
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4" *ngIf="action === 2">
+                            <div class="form-group" *ngIf="defultOption">
+                                <label for="defaultSttc">Default</label>
+                                <select id="defaultSttc" class="form-control input-sm"
+                                    formControlName="defaultSttc"
+                                    [ngClass]="{ 'is-invalid': submitted && f.defaultSttc.errors }">
+                                    <option hidden value="" disabled selected>
+                                        {{defultOption.parentLookupData.description}}
+                                    </option>
+                                    <option *ngFor="let defultOpt of defultOption.subLookupData"
+                                        [value]="defultOpt.lookupValue">{{defultOpt.description}}
+                                    </option>
+                                </select>
+                                <div *ngIf="submitted && f.defaultSttc.errors" class="invalid-feedback">
+                                    <div *ngIf="f.defaultSttc.errors.required" style="color: red;">
+                                        Default is required</div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="form-group">
-                            <label for="description">Description</label>
-                            <input type="text" id="description" 
-                                maxlength="40"
-                                class="form-control input-sm"
-                                placeholder="Enter description" />
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="form-group">
-                            <label for="sttcOrder">Section Order</label>
-                            <input type="number" id="sttcOrder" min="0" max="10"
-                                formControlName="sttcOrder"
-                                class="form-control input-sm"
-                                placeholder="Enter control order" />
-                        </div>
-                    </div>
-                    <!-- filedType will pull -->
-                    <div class="col-lg-4">
-                        <div class="form-group">
-                            <label for="filedTitle">Filed Title</label>
-                            <input type="text" id="filedTitle" 
-                                maxlength="40"
-                                class="form-control input-sm"
-                                placeholder="Enter filed title" />
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="form-group">
-                            <label for="filedName">Filed Name</label>
-                            <input type="text" id="filedName" 
-                                maxlength="40"
-                                class="form-control input-sm"
-                                placeholder="Enter filed name" />
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="form-group">
-                            <label for="placeHolder">PlaceHolder</label>
-                            <input type="text" id="placeHolder" 
-                                maxlength="40"
-                                class="form-control input-sm"
-                                placeholder="Enter placeholder" />
-                        </div>
-                    </div>
-                </div>    
+                </div>
             </div>
         </div>
-    </div>
-    <div class="col-lg-12" style="margin-top: 15px;margin-bottom: 5px;">
-        <button class="btn btn-sm btn-default" (click)="back()">Clear</button>
-        <button type="submit" [disabled]="loading" 
-            class="btn btn-sm btn-danger" style="float:right" >Register</button>
-    </div>
+        <div class="col-lg-12" style="margin-top: 15px;margin-bottom: 5px;">
+            <button type="reset" 
+                [attr.disabled]="f?.status?.value === 2 ? true : null"
+                class="btn btn-sm btn-default">CLEAR</button>
+            <button type="submit" [disabled]="loading"
+                [attr.disabled]="f?.status?.value === 2 ? true : null"
+                class="btn btn-sm btn-danger"
+                style="float:right">
+                {{breadcrumb | uppercase}}
+            </button>
+        </div>
+    </form>
 </div>
 
