--- a/src/app/_component/stt-setting/stt-list/stt-list.component.html
+++ b/src/app/_component/stt-setting/stt-list/stt-list.component.html
@@ -34,7 +34,7 @@
                 <span class="caret"></span></button>
             <ul class="dropdown-menu" style="left: -38px;">
                 <li *ngFor="let menu of dropdownButton.menus">
-                    <a href="#">{{menu.title}}</a></li>
+                    <a (click)="menuAction(menu)">{{menu.title}}</a></li>
             </ul>
         </div>
     </div>
@@ -69,7 +69,7 @@
             <td>{{sourceTaskType.sttId}}</td>
             <td>{{sourceTaskType.serviceName}}</td>
             <td style="text-align: center;">
-                {{sourceTaskType.default ? 'Yes' : 'No'}}
+                {{sourceTaskType.sttDefault.description}}
             </td>
             <td style="text-align: center;">
                 {{sourceTaskType.dateCreated | date:'dd-MM-yyyy'}}
@@ -122,7 +122,7 @@
                     </button>
                     <ul class="dropdown-menu" style="left: -65px;">
                         <li *ngFor="let menu of actionMenu">
-                            <a href="#">{{menu.title}}</a>
+                            <a (click)="menuAction(menu)">{{menu.title}}</a>
                         </li>
                     </ul>
                 </div>
