--- a/src/app/_component/stt-setting/stts-list/stts-list.component.html
+++ b/src/app/_component/stt-setting/stts-list/stts-list.component.html
@@ -38,7 +38,8 @@
             </button>
             <ul class="dropdown-menu" style="left: -38px;">
                 <li *ngFor="let menu of dropdownButton.menus">
-                    <a href="#">{{menu.title}}</a></li>
+                    <a (click)="menuAction(menu)">{{menu.title}}</a>
+                </li>
             </ul>
         </div>
     </div>
@@ -76,7 +77,7 @@
             </td>
             <td>{{sttSection.sttSName}}</td>
             <td style="text-align: center;">
-                {{sttSection.default ? 'Yes' : 'No'}}
+                {{sttSection.sttsDefault.description}}
             </td>
             <td style="text-align: center;">
                 {{sttSection.dateCreated | date:'dd-MM-yyyy'}}
@@ -121,7 +122,7 @@
                     </button>
                     <ul class="dropdown-menu" style="left: -90px;">
                         <li *ngFor="let menu of actionMenu">
-                            <a href="#">{{menu.title}}</a></li>
+                            <a (click)="menuAction(menu)">{{menu.title}}</a></li>
                     </ul>
                 </div>
             </td>
