--- a/src/app/_component/stt-setting/stt-list/stt-list.component.html
+++ b/src/app/_component/stt-setting/stt-list/stt-list.component.html
@@ -52,7 +52,7 @@
             <th>Total Task</th>
             <th>Total Form</th>
             <th>Type</th>
-            <th style="width: 12%;">Action</th>
+            <th style="width: 10%;">Action</th>
         </tr>
     </thead>
     <tbody>
@@ -100,11 +100,6 @@
                         <span class="glyphicon glyphicon-edit"
                         style="color:blue"></span>
                     </button>
-                    <button type="button" class="btn btn-default"
-                        (click)="editAction(sourceTaskType)">
-                        <span class="glyphicon glyphicon-tree-deciduous"
-                        style="color:#c4478b"></span>
-                    </button>
                     <!-- add the method for delete the queue detail -->
                     <button type="button" class="btn btn-default"
                         data-toggle="modal" data-target="#deleteAction"
@@ -120,9 +115,12 @@
                         <span class="glyphicon glyphicon-cog" 
                         style="color: black;"></span>
                     </button>
-                    <ul class="dropdown-menu" style="left: -65px;">
+                    <ul class="dropdown-menu" style="left: -100px;">
                         <li *ngFor="let menu of actionMenu">
-                            <a (click)="menuAction(menu)">{{menu.title}}</a>
+                            <a (click)="menuAction(menu)">
+                                <samp [ngClass]="menu.icon"></samp> 
+                                {{menu.title}}
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -138,3 +136,23 @@
         (deleteEvent)="deleteActionTriger()">
     </del-box>
 </div>
+
+<!-- for link action -->
+<div class="modal fade" id="linkUserAction"
+    role="dialog" style="top: 85px;">
+    <del-box
+        [title]="title"
+        [subTitle]="subTitle"
+        (deleteEvent)="deleteActionTriger()">
+    </del-box>
+</div>
+<!-- for link action -->
+<div class="modal fade" id="linkFormAction"
+    role="dialog" style="top: 85px;">
+    <del-box
+        [title]="title"
+        [subTitle]="subTitle"
+        (deleteEvent)="deleteActionTriger()">
+    </del-box>
+</div>
+
