--- a/src/app/_component/auth/login/login.component.html
+++ b/src/app/_component/auth/login/login.component.html
@@ -5,7 +5,7 @@
         <h2 class="text-center">Log in</h2>       
         <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" formControlName="username" class="form-control input-sm"
+            <input type="text" pInputText formControlName="username" class="form-control input-sm"
                 [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
             <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
                 <div *ngIf="f.username.errors.required" style="color: red;">
@@ -36,5 +36,5 @@
         <div class="text-center">
             <a routerLink="/forgotpass">Forgot Password?</a>
         </div>
-    </div>
+    </div>    
 </div>
