--- a/src/app/_component/stt-setting/stts-list/stts-list.component.html
+++ b/src/app/_component/stt-setting/stts-list/stts-list.component.html
@@ -57,7 +57,7 @@
             <th>Total STT</th>
             <th>Total Form</th>
             <th>Total Control</th>
-            <th style="width: 12%;">Action</th>
+            <th style="width: 10%;">Action</th>
         </tr>
     </thead>
     <tbody>
@@ -99,11 +99,6 @@
                         <span class="glyphicon glyphicon-edit"
                         style="color:blue"></span>
                     </button>
-                    <button type="button" class="btn btn-default"
-                        (click)="editAction(sttSection)">
-                        <span class="glyphicon glyphicon-tree-deciduous"
-                        style="color:#c4478b"></span>
-                    </button>
                     <!-- add the method for delete the queue detail -->
                     <button type="button" class="btn btn-default"
                         data-toggle="modal" data-target="#deleteAction"
@@ -120,9 +115,13 @@
                         <span class="glyphicon glyphicon-cog" 
                         style="color: black;"></span>
                     </button>
-                    <ul class="dropdown-menu" style="left: -90px;">
+                    <ul class="dropdown-menu" style="left: -100px;">
                         <li *ngFor="let menu of actionMenu">
-                            <a (click)="menuAction(menu)">{{menu.title}}</a></li>
+                            <a (click)="menuAction(menu)">
+                                <samp [ngClass]="menu.icon"></samp> 
+                                {{menu.title}}
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </td>
