--- a/src/app/_content/app.less
+++ b/src/app/_content/app.less
@@ -629,6 +629,16 @@ td {
   background-color: #343a40;
 }
 
+.badge-query-form {
+  color: red;
+  background-color: #ffc107;
+}
+
+.badge-service-form {
+  color: #fff;
+  background-color: #343a40;
+}
+
 .view-side-form {
   position: absolute;
   z-index: 100;
