--- a/src/app/_component/stt-setting/sttc-list/sttc-list.component.html
+++ b/src/app/_component/stt-setting/sttc-list/sttc-list.component.html
@@ -127,7 +127,7 @@
                     </button>
                     <ul class="dropdown-menu" style="left: -100px;">
                         <li *ngFor="let menu of actionMenu">
-                            <a (click)="menuAction(menu)">
+                            <a (click)="menuAction(menu, sttControl)">
                                 <samp [ngClass]="menu.icon"></samp>
                                 {{menu.title}}
                             </a>
