--- a/src/app/_component/stt-setting/stts-list/stts-list.component.html
+++ b/src/app/_component/stt-setting/stts-list/stts-list.component.html
@@ -117,7 +117,7 @@
                     </button>
                     <ul class="dropdown-menu" style="left: -100px;">
                         <li *ngFor="let menu of actionMenu">
-                            <a (click)="menuAction(menu)">
+                            <a (click)="menuAction(menu, sttSection)">
                                 <samp [ngClass]="menu.icon"></samp> 
                                 {{menu.title}}
                             </a>
